batterydet: show low battery logo when battery is low
Change-Id: Ie6738ccf9280f1d313865a784a13a36a6cc591d4

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,8 @@ kk
 /include/rle_charge_logo.h
 /common/rle_logo.c
 /tools/logos/ingenic.jpg.rle
+/include/rle_low_battery_logo.h
+/tools/logos/low_battery_logo.rle
 
 *.depend*
 /LOG
