--- a/board/ingenic/watch/Makefile
+++ b/board/ingenic/watch/Makefile
@@ -29,6 +29,7 @@ LIB	= $(obj)lib$(BOARD).o
 COBJS-y	:= $(BOARD).o
 COBJS-$(CONFIG_VIDEO_BM347WV_F_8991FTGF) += lcd-8991.o
 COBJS-$(CONFIG_VIDEO_TRULY_TFT240240_2_E) += lcd-truly-tft240240.o
+COBJS-$(CONFIG_VIDEO_BOE_HSX0154B24B) += lcd-boe-hsx0154b24b.o
 COBJS-$(CONFIG_VIDEO_TRULY_TFT320320) += lcd-truly-tft320320.o
 COBJS-$(CONFIG_VIDEO_BYD_BM8766U) += lcd-bydbm8766u.o
 COBJS-$(CONFIG_VIDEO_BYD_9177AA) += lcd-9177aa.o
