[ADD] add the support for norflash spl boot kernel

--- a/boards.cfg
+++ b/boards.cfg
@@ -567,6 +567,7 @@ k1mbv04_uImage_rvms          mips        xburst      k1mbv04             ingenic
 phoenix_v10_uImage_msc0      mips        xburst      phoenix        	 ingenic        x1000		phoenix:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 phoenix_v10_uImage_sfc_nor   mips        xburst      phoenix		 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC
 phoenix_v10_xImage_sfc_nor   mips        xburst      phoenix		 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_XIMAGE
+phoenix_xImage_nor_spl_boot   mips        xburst      phoenix		 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_XIMAGE,NOR_SPL_BOOT_OS
 phoenix_v10_uImage_spi_nand  mips        xburst      phoenix		 ingenic	x1000       phoenix:SPL_SPI_NAND
 phoenix_v10_uImage_sfc_nand  mips        xburst      phoenix		 ingenic	x1000       phoenix:SPL_SFC_NAND
 halley2_v10_uImage_spi_nand  mips        xburst      halley2		 ingenic	x1000       halley2:SPL_SPI_NAND
