--- a/boards.cfg
+++ b/boards.cfg
@@ -571,7 +571,7 @@ phoenix_v10_xImage_sfc_nor   mips        xburst      phoenix		 ingenic        x1
 phoenix_v10_uImage_sfc_nand  mips        xburst      phoenix		 ingenic	x1000		phoenix:SPL_SFC_NAND
 phoenix_v10_uImage_spi_nand  mips        xburst      phoenix		 ingenic	x1000       	phoenix:SPL_SPI_NAND
 canna_v10_uImage_sfc_nor     mips        xburst      canna		 ingenic        x1000		canna:SPL_SFC_NOR
-canna_v10_zImage_sfc_nor     mips        xburst      canna		 ingenic        x1000		canna:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE
+canna_v10_zImage_sfc_nor     mips        xburst      canna		 ingenic        x1000		canna:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE,JZ_MMC_MSC0
 canna_v10_uImage_msc0        mips        xburst      canna        	 ingenic        x1000		canna:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,LARGE_MBR,JZ_MMC_MSC0
 aslmom_v10_zImage_sfc_nor    mips     	 xburst      aslmom		 ingenic        x1000       	aslmom:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE
 halley2_v10_uImage_spi_nand  mips        xburst      halley2		 ingenic	x1000		halley2:SPL_SPI_NAND
