newton2_plus: vibrator shock 200ms when machine begin
Change-Id: Ifd7a8882131043360c8a9cbbb19fe2f4057f3a2a

--- a/common/Makefile
+++ b/common/Makefile
@@ -50,6 +50,7 @@ COBJS-$(CONFIG_CMD_BOOTM) += cmd_bootm.o
 COBJS-y += cmd_help.o
 COBJS-y += cmd_version.o
 COBJS-y += cmd_ddr_test.o
+COBJS-y += cmd_vibrator_shock.o
 
 # environment
 COBJS-y += env_attr.o
