--- a/common/Makefile
+++ b/common/Makefile
@@ -44,7 +44,7 @@ COBJS-$(CONFIG_SYS_GENERIC_BOARD) += board_r.o
 COBJS-y += cmd_boot.o
 COBJS-y += cmd_boota.o
 COBJS-y += cmd_battery_for_kernel.o
-COBJS-y += cmd_vibrator_shock.o
+COBJS-$(CONFIG_BOOT_ANDROID) += cmd_vibrator_shock.o
 COBJS-$(CONFIG_BOOT_ANDROID) += boot_mode.o
 COBJS-$(CONFIG_CMD_FASTBOOT) += cmd_fastboot.o
 COBJS-$(CONFIG_CMD_BOOTM) += cmd_bootm.o
