Support CONFIG_DDR_CS1 for DDR
Change-Id: Ia68ad582e3166c4a5ddd68df914c77df8288cd2a

--- a/arch/mips/cpu/xburst/m200/Makefile
+++ b/arch/mips/cpu/xburst/m200/Makefile
@@ -29,7 +29,11 @@ LIB	= $(obj)lib$(SOC).o
 all:	$(obj).depend $(LIB)
 
 $(LIB):	$(OBJS)
+ifeq ($(CONFIG_DDR_CS1), y)
+	@cp libm200_cs1.bk $@
+else
 	@cp libm200.bk $@
+endif
 
 #########################################################################
 
