Add tsyc board.
Change-Id: I50ec43b0b52b7ab1a82984358d636e35c7086e39

--- a/boards.cfg
+++ b/boards.cfg
@@ -558,6 +558,7 @@ lantern_android_msc0          mips        xburst      lantern              ingen
 paramount_android_msc0          mips        xburst      paramount              ingenic        m200      paramount:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 weseeing_android_msc0          mips        xburst      weseeing              ingenic        m200      weseeing:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 kepter_wc_android_msc0          mips        xburst      kepter_wc              ingenic        m200      kepter_wc:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
+tsyc_android_msc0          mips        xburst      tsyc              ingenic        m200      tsyc:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
