--- a/boards.cfg
+++ b/boards.cfg
@@ -558,7 +558,7 @@ k1mbv02_uImage_rvms          mips        xburst      k1mbv02             ingenic
 k1mbv04_uImage_rvms          mips        xburst      k1mbv04             ingenic        m200		k1mbv04:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 phoenix_v10_uImage_msc0      mips        xburst      phoenix        	 ingenic        x1000		phoenix:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 phoenix_v10_uImage_sfc_nor   mips        xburst      phoenix		 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC
-phoenix_v10_xImage_sfc_nor   mips        xburst      phoenix		 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_XIMAGE
+phoenix_v10_xImage_sfc_nor   mips        xburst      phoenix		 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_XIMAGE,OTA_VERSION20
 phoenix_xImage_nor_spl_boot   mips        xburst      phoenix		 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_XIMAGE,NOR_SPL_BOOT_OS
 phoenix_v10_uImage_spi_nand  mips        xburst      phoenix		 ingenic	x1000       phoenix:SPL_SPI_NAND
 phoenix_v10_uImage_sfc_nand  mips        xburst      phoenix		 ingenic	x1000       phoenix:SPL_SFC_NAND
