add w561a board config
Change-Id: If767f3ae2b30425eddbcbd374e799fc265f9671c

--- a/drivers/video/Makefile
+++ b/drivers/video/Makefile
@@ -75,6 +75,7 @@ COBJS-$(CONFIG_VIDEO_EDO_E1392AM1) += jz_lcd/lcd_panel/edo_e1392am1.o
 COBJS-$(CONFIG_VIDEO_AUO_H139BLN01) += jz_lcd/lcd_panel/auo_h139bln01.o
 COBJS-$(CONFIG_VIDEO_ARS_NT35350) += jz_lcd/lcd_panel/ars_nt35350.o
 COBJS-$(CONFIG_VIDEO_LH155) += jz_lcd/lcd_panel/lh155.o
+COBJS-$(CONFIG_VIDEO_STD_TFT240320) += jz_lcd/lcd_panel/std_tft240320.o
 COBJS-$(CONFIG_JZ_MIPI_DSI) += jz_lcd/jz_mipi_dsi/jz_mipi_dsi.o jz_lcd/jz_mipi_dsi/jz_mipi_dsi_lowlevel.o jz_lcd/jz_mipi_dsi/jz_mipi_dsih_hal.o \
 				jz_lcd/jz_mipi_dsi/write_command_to_mipi.o
 COBJS-$(CONFIG_VIDEO_JZ4775) += jz_lcd/backlight_pwm.o jz_lcd/jz4775_lcd.o
