Add Halley2-mini board support

--- a/boards.cfg
+++ b/boards.cfg
@@ -571,6 +571,7 @@ canna_v10_uImage_msc0        mips        xburst      canna        	 ingenic     
 aslmom_v10_zImage_sfc_nor    mips     	 xburst      aslmom		 ingenic        x1000       	aslmom:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE,JZ_MMC_MSC0,SMALLER_SPL
 halley2_v10_uImage_spi_nand  mips        xburst      halley2		 ingenic	x1000		halley2:SPL_SPI_NAND
 halley2_v10_uImage_sfc_nor   mips        xburst      halley2		 ingenic        x1000       	halley2:SPL_SFC_NOR,ENV_IS_IN_SFC
+halley2_v10_zImage_sfc_nor   mips        xburst      halley2		 ingenic        x1000		halley2:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE,JZ_MMC_MSC0
 burner_x1000_lpddr           mips        xburst      burner_x1000	 ingenic        x1000       burner_x1000:DDR_TYPE_LPDDR,MTD_SPINAND,MTD_SFCNAND,JZ_SFC
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
