--- a/boards.cfg
+++ b/boards.cfg
@@ -499,6 +499,7 @@ f4775_uImage_msc1            mips        xburst      f4775               ingenic
 f4775_uImage_nand            mips        xburst      f4775               ingenic        jz4775      f4775:JZ_NAND_MGR
 f4775_uImage_spinor          mips        xburst      f4775               ingenic        jz4775      f4775:SPL_SPI_SUPPORT
 halley_uImage_spinor         mips        xburst      halley              ingenic        m150        halley:SPL_SPI_SUPPORT
+halley_xImage_nor_spl_boot         mips        xburst      halley              ingenic        m150        halley:SPL_SPI_SUPPORT,SPL_OS_BOOT
 halley_linux_nand			 mips        xburst      halley               ingenic        m150		halley:JZ_NAND_MGR,
 gemini_android_msc0          mips        xburst      gemini              ingenic        jz4775	    gemini:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
 gemini_uImage_msc0           mips        xburst      gemini              ingenic        jz4775      gemini:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
