add A2 board config

--- a/board/ingenic/watch/Makefile
+++ b/board/ingenic/watch/Makefile
@@ -45,6 +45,7 @@ COBJS-$(CONFIG_VIDEO_EDO_E1392AM1) += lcd-edo-e1392am1.o
 COBJS-$(CONFIG_VIDEO_AUO_H139BLN01) += lcd-auo-h139bln01.o
 COBJS-$(CONFIG_VIDEO_ARS_NT35350) += lcd-ars-nt35350.o
 COBJS-$(CONFIG_VIDEO_STD_TFT240320) += lcd-std-tft240320.o
+COBJS-$(CONFIG_VIDEO_JDI_LPM013M091A) += lcd-jdi-lpm013m091a.o
 
 SRCS	:= $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
 OBJS	:= $(addprefix $(obj),$(COBJS-y))
