canna_update: 	Modify canna update config support old update funcion 	Add new canna config for sd udpate

--- a/boards.cfg
+++ b/boards.cfg
@@ -566,8 +566,8 @@ phoenix_xImage_nor_spl_boot  mips        xburst      phoenix             ingenic
 phoenix_v10_uImage_sfc_nand  mips        xburst      phoenix		 ingenic	x1000		phoenix:SPL_SFC_NAND
 phoenix_v10_uImage_spi_nand  mips        xburst      phoenix		 ingenic	x1000       	phoenix:SPL_SPI_NAND
 canna_v10_uImage_sfc_nor     mips        xburst      canna		 ingenic        x1000		canna:SPL_SFC_NOR
-canna_v10_zImage_sfc_nor     mips        xburst      canna		 ingenic        x1000		canna:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE,JZ_MMC_MSC0
-canna_v10_zImage_sfc_nor_legacy     mips        xburst      canna		 ingenic        x1000		canna:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE,JZ_MMC_MSC0,UPDATE_LEGACY
+canna_v10_zImage_sfc_nor     mips        xburst      canna		 ingenic        x1000		canna:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE
+canna_v10_zImage_sfc_nor_update_sd     mips        xburst      canna		 ingenic        x1000		canna:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE,JZ_MMC_MSC0,UPDATE_SD
 canna_v10_uImage_msc0        mips        xburst      canna        	 ingenic        x1000		canna:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,LARGE_MBR,JZ_MMC_MSC0
 aslmom_v10_zImage_sfc_nor    mips     	 xburst      aslmom		 ingenic        x1000       	aslmom:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE,JZ_MMC_MSC0,SMALLER_SPL
 aslmom_v10_zImage_sfc_nor_legacy    mips     	 xburst      aslmom		 ingenic        x1000       	aslmom:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE,SMALLER_SPL,UPDATE_LEGACY
