--- a/boards.cfg
+++ b/boards.cfg
@@ -530,6 +530,7 @@ grus_uImage_msc1             mips        xburst      grus                ingenic
 grus_spi_burner              mips        xburst      grus                ingenic        jz4780	    grus:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1,SPI_BURNER
 grus_android_nand            mips        xburst      grus                ingenic        jz4780	    grus:JZ_NAND_MGR,BOOT_ANDROID
 grus_linux_nand				 mips        xburst      grus                ingenic        jz4780	    grus:JZ_NAND_MGR,
+ci20_uImage_msc1             mips        xburst      ci20                ingenic        jz4780      ci20:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
 f4785_uImage_msc0            mips        xburst      f4785               ingenic        m200		f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 f4785_uImage_emmc            mips        xburst      f4785               ingenic        m200		f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,SUPPORT_EMMC_BOOT
 f4785_uImage_msc1            mips        xburst      f4785               ingenic        m200		f4785:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
