--- a/boards.cfg
+++ b/boards.cfg
@@ -561,6 +561,7 @@ kepter_wc_android_msc0          mips        xburst      kepter_wc              i
 shield_wc_android_msc0          mips        xburst      shield_wc              ingenic        m200      shield_wc:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 raypai_ds_android_msc0          mips        xburst      raypai_ds              ingenic        m200      raypai_ds:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 tsyc_android_msc0          mips        xburst      tsyc              ingenic        m200      tsyc:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
+LG1_android_msc0          mips        xburst      LG1              ingenic        m200      LG1:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
