Add fastboot function, only opened in coldwave, enter fastboot while fastboot gpio pressed
Change-Id: I4e2a7a1250175ef64d0d6e4fd09bf80298b059ba

--- a/drivers/usb/gadget/Makefile
+++ b/drivers/usb/gadget/Makefile
@@ -42,7 +42,7 @@ COBJS-$(CONFIG_USB_JZ_BURNER_GADGET) += g_burntool.o
 COBJS-$(CONFIG_USB_JZ_DWC2_UDC)	+= jz_dwc2_udc.o
 COBJS-$(CONFIG_USB_JZ_DWC2_UDC_V1_1)	+= jz47xx_dwc2_udc.o
 COBJS-$(CONFIG_FASTBOOT_GADGET) += g_fastboot.o
-COBJS-$(CONFIG_FASTBOOT_FUNCTION) += f_fastboot.o
+COBJS-$(CONFIG_FASTBOOT_FUNCTION) += f_fastboot.o fb_mmc.o image-sparse.o
 COBJS-$(CONFIG_JZ_VERDOR_BURN_FUNCTION) += f_jz_cloner.o
 endif
 ifdef CONFIG_USB_ETHER
