--- a/drivers/spi/Makefile
+++ b/drivers/spi/Makefile
@@ -49,6 +49,9 @@ COBJS-$(CONFIG_OC_TINY_SPI) += oc_tiny_spi.o
 COBJS-$(CONFIG_OMAP3_SPI) += omap3_spi.o
 COBJS-$(CONFIG_SOFT_SPI) += soft_spi.o
 COBJS-$(CONFIG_INGENIC_SOFT_SPI) += ingenic_soft_spi.o
+ifdef CONFIG_BURNER
+COBJS-$(CONFIG_JZ_SFC) += jz_sf_params.o
+endif
 COBJS-$(CONFIG_JZ_SPI) += jz_spi.o
 COBJS-$(CONFIG_JZ_SFC) += jz_sfc.o
 COBJS-$(CONFIG_SH_SPI) += sh_spi.o
